--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "next": "12.0.10",
+    "node-fetch": "^3.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.1",
